# sketchup-mcp

./: .gitignore  deploy.sh  pyproject.toml  sketchup.json  su_mcp.rb
docs/corpus/: finish-guide.md  joint-taxonomy.md  material-reference.md  plan-artifact-spec.md  project-archetypes.md  tool-tiers.md
docs/corpus/ana-white/: building-quickstart.md  painting-guide.md  wood-choosing-guide.md
docs/corpus/sauna/: sauna-building-reference.md
docs/corpus/woodgears-ca/models/: table.skp  (+2 more)
docs/superpowers/plans/: 2026-03-28-furniture-skill-improvement.md  2026-03-28-furniture-tools-fork.md
docs/superpowers/specs/: 2026-03-27-sketchup-mcp-woodworking-design.md  2026-03-28-furniture-skill-improvement-design.md
evals/: eval-runner.sh  run_layer1.py  scoring.md
evals/layer1-decisions/: dimension-reasoning.json  joint-selection.json  material-tool-finish.json  plan-tier-selection.json
evals/layer2-execution/: joinery-modeling.json  scene-creation.json
evals/layer3-integration/: bookshelf.json  drawer-box.json  kitchen-table.json  loft-bed-module.json  pocket-screw-bookshelf.json  workbench.json
evals/results/2026-03-28-131650/: baseline-analysis.md  dimension-reasoning-results.json  joint-selection-results.json  material-tool-finish-results.json  plan-tier-selection-results.json
evals/results/2026-03-28-post-fix/: joint-selection-results.json  plan-tier-selection-results.json
skills/furniture-design-sketchup/: SKILL.md
src/sketchup_mcp/: ruby_templates.py  server.py
su_mcp/: extension.json  main.rb  package.rb  woodworking.rb
tests/: test_ruby_templates.py
(+17 files in other folders)
