[project]
name = "sketchup-mcp"
version = "1.7.0"
description = "Sketchup integration through Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mhyrr", email = "grolsen@gmail.com"},
    {name = "dasfink", email = "misha@plantfortomorrow.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0"
]

[project.urls]
Homepage = "https://github.com/mishafinkler/sketchup-mcp"
Issues = "https://github.com/mishafinkler/sketchup-mcp/issues"

[project.scripts]
sketchup-mcp = "sketchup_mcp.server:main"

[project.entry-points.mcp]
sketchup = "sketchup_mcp.server:mcp"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"} 

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
